pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-wildcard-rule-and-default-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-wildcard-rule-and-default-backend
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  rules:
    - host: '*.localhost'
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
